--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <main>
             <h1>Your Vision, Our Expertise—Crafting Digital <br>Success Together</h1>
             <p>Creativity & Affordability</p>
-            <a href="pages/contact.html"><button class="btn">Enquire Here</button></a>
+            <a href="contact.html"><button class="btn">Enquire Here</button></a>
         </main>
         <div class="hero-slide">
             <img src="images/hero-img.svg" alt="">
@@ -54,14 +54,14 @@
                 <div class="offer-text">
                     <h1>Plan your desired site</h1>
                     <p>Transform your vision into a fully functional website with our expert site planning services. We help you craft a tailored plan that ensures your website meets all your business goals and showcases your unique strengths.</p>
-                    <div class="offerbtn"><a href="pages/service.html">View our services</a></div>
+                    <div class="offerbtn"><a href="service.html">View our services</a></div>
                 </div>
             </div>
             <div class="offer-item">
                 <div class="offer-text">
                     <h1>Visualizing your idea</h1>
                     <p>Bring your website concepts to life with our visualization services. We take your ideas and turn them into captivating designs that resonate with your target audience and elevate your brand.</p>
-                    <div class="offerbtn"><a href="pages/service.html">View our services</a></div>
+                    <div class="offerbtn"><a href="service.html">View our services</a></div>
                 </div>
                 <img src="images/1.png" alt="">
 
@@ -71,7 +71,7 @@
                 <div class="offer-text">
                     <h1>Give your business identity</h1>
                     <p>Establish a strong brand presence with our custom logo creation services. We design logos that reflect your business identity, making a lasting impression on your customers and setting you apart from the competition.</p>
-                    <div class="offerbtn"><a href="pages/service.html">View our services</a></div>
+                    <div class="offerbtn"><a href="service.html">View our services</a></div>
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
                     <div class="content">
                         <p>Full Stack Website</p>
                         <h2>LandLordts</h2>
-                        <a href="pages/projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
+                        <a href="projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
                     </div>
                 </div>
                 <div class="item">
@@ -97,7 +97,7 @@
                     <div class="content">
                         <p>Standard Website</p>
                         <h2>Lander</h2>
-                        <a href="pages/projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
+                        <a href="projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
                     </div>
                 </div>
                 <div class="item">
@@ -105,7 +105,7 @@
                     <div class="content">
                         <p>Web Design</p>
                         <h2>Winslough</h2>
-                        <a href="pages/projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
+                        <a href="projects.html#project-grid-section" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">View Portfolio</button></a>
                     </div>
                 </div>
 
