--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourney | Projects</title>
 
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/grid.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/grid.css">
+    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -29,7 +29,7 @@
                     <div class="ItemCard">
                         <a class="ItemCard__dest cover" href="https://crawfordza.my.canva.site/" target="_blank"></a>
                         <figure class="ItemCard__thumb">
-                            <img src="/images/1.png" height="150" width="200" alt="">
+                            <img src="images/1.png" height="150" width="200" alt="">
                             <span class="shadow cover"></span>
                         </figure>
                     </div>
@@ -38,7 +38,7 @@
                     <div class="ItemCard">
                         <a class="ItemCard__dest cover" href="https://driticore.github.io/landlordts/index.html" target="_blank"></a>
                         <figure class="ItemCard__thumb">
-                            <img src="/images/home-slide1.png" height="150" width="200" alt="">
+                            <img src="images/home-slide1.png" height="150" width="200" alt="">
                             <span class="shadow cover"></span>
                         </figure>
                     </div>
@@ -47,7 +47,7 @@
                     <div class="ItemCard">
                         <a class="ItemCard__dest cover" href="#" target="_blank"></a>
                         <figure class="ItemCard__thumb">
-                            <img src="/images/home-slide2.png" height="150" width="200" alt="">
+                            <img src="images/home-slide2.png" height="150" width="200" alt="">
                             <span class="shadow cover"></span>
                         </figure>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="ItemCard">
                         <a class="ItemCard__dest cover" href="https://driticore.github.io/lander/" target="_blank"></a>
                         <figure class="ItemCard__thumb">
-                            <img src="/images/2.png" height="150" width="200" alt="">
+                            <img src="images/2.png" height="150" width="200" alt="">
                             <span class="shadow cover"></span>
                         </figure>
                     </div>
@@ -66,7 +66,7 @@
     
                 <div style="margin-top: 10px;">
                     <h1>View Our Portfolio</h1>
-                    <a href="/pages/contact.html" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">Enquire Now</button></a>
+                    <a href="contact.html" style="text-decoration: none; color: black;"><button style="margin-top: 20px; padding: 1rem; background-color: rgba(97, 255, 83, 0.933);">Enquire Now</button></a>
                 </div>
             </div>
             
@@ -81,21 +81,21 @@
 
     <section id="project-grid-section">
         <div class="project-grid">
-            <a href="https://driticore.github.io/landlordts/index.html" target="_blank"><img src="/images/home-slide1.png" alt=""></a>
-            <a href="https://crawfordza.my.canva.site/hotels-business-website" target="_blank"><img src="/images/home-slide2.png" alt=""></a>
-            <a href="" target="_blank"><img src="/images/home-slide3.png" alt=""></a>
-            <a href="https://crawfordza.my.canva.site/" target="_blank"><img src="/images/1.png" alt=""></a>
-            <a href="https://driticore.github.io/lander/" target="_blank"><img src="/images/2.png" alt=""></a>
-            <a href="https://nextjs-consultancy-dun.vercel.app/" target="_blank"><img src="/images/3.png" alt=""></a>
+            <a href="https://driticore.github.io/landlordts/index.html" target="_blank"><img src="images/home-slide1.png" alt=""></a>
+            <a href="https://crawfordza.my.canva.site/hotels-business-website" target="_blank"><img src="images/home-slide2.png" alt=""></a>
+            <a href="" target="_blank"><img src="images/home-slide3.png" alt=""></a>
+            <a href="https://crawfordza.my.canva.site/" target="_blank"><img src="images/1.png" alt=""></a>
+            <a href="https://driticore.github.io/lander/" target="_blank"><img src="images/2.png" alt=""></a>
+            <a href="https://nextjs-consultancy-dun.vercel.app/" target="_blank"><img src="images/3.png" alt=""></a>
         </div>
     </section>
 
     <footer id="footer-container" class="site-footer"></footer>
 
 
-    <script src="/components/footer.js"></script>
-    <script src="/components/navbar.js"></script>
-    <script src="/components/menu.js"></script>
+    <script src="components/footer.js"></script>
+    <script src="components/navbar.js"></script>
+    <script src="components/menu.js"></script>
 </body>
 
 </html>
