--- a/service.html
+++ b/service.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourney | Services</title>
 
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/grid.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/grid.css">
+    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -112,7 +112,7 @@
                     <li>1 Custom Design</li>
                     <li>Email Support</li>
                 </ul>
-                <a href="/pages/contact.html" class="btn">Get Started</a>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
 
             <div class="pricing-item">
@@ -126,7 +126,7 @@
                     <li>Dedicated Support</li>
                     <li>Social Media Integration</li>
                 </ul>
-                <a href="/pages/contact.html" class="btn">Get Started</a>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
 
             <div class="pricing-item">
@@ -141,16 +141,16 @@
                     <li>Comprehensive Analytics</li>
                     <li>CMS setup(e.g., WordPress) with basic training</li>
                 </ul>
-                <a href="/pages/contact.html" class="btn">Get Started</a>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
         </div>
     </section>
 
     <footer id="footer-container" class="site-footer"></footer>
 
-    <script src="/components/footer.js"></script>
-    <script src="/components/navbar.js"></script>
-    <script src="/components/menu.js"></script>
+    <script src="components/footer.js"></script>
+    <script src="components/navbar.js"></script>
+    <script src="components/menu.js"></script>
 </body>
 
 </html>
