--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourney | About Us</title>
 
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/grid.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/grid.css">
+    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -62,9 +62,9 @@
 
     <footer id="footer-container" class="site-footer"></footer>
 
-    <script src="/components/footer.js"></script>
-    <script src="/components/navbar.js"></script>
-    <script src="/components/menu.js"></script>
+    <script src="components/footer.js"></script>
+    <script src="components/navbar.js"></script>
+    <script src="components/menu.js"></script>
 </body>
 
 </html>
