--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourney | Contact Us</title>
 
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/grid.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/grid.css">
+    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -76,9 +76,9 @@
     <footer id="footer-container" class="site-footer"></footer>
 
 
-    <script src="/components/footer.js"></script>
-    <script src="/components/navbar.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="components/footer.js"></script>
+    <script src="components/navbar.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 
