--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         </div>
         <div class="contact-row">
             <div class="contact-left">
-                <form id="form" action="https://formsubmit.co/e0ca7620e44de739f714a5a00440e0e3" method="POST">
+                <form action="https://formsubmit.co/e0ca7620e44de739f714a5a00440e0e3" method="POST">
                     <div class="contact-item">
                         <label for="name">Name</label>
                         <input type="text" placeholder="Name" name="name" id="name" required>
