--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
                         <label for="name">Name</label>
                         <input type="text" placeholder="Name" name="name" id="name" required>
                     </div>
+                    <input type="hidden" name="_captcha" value="false">
                     <div stylen="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
                         <div class="contact-item">
                             <label for="phone-number">Phone Number</label>
