--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,13 +17,15 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header id="navbar"></header>
     <main class="contact-container">
         <div class="contact-title">
             <h1>Contact Our Team</h1><br>
             <p>Looking to know more about our services or scaling your business? Then You've come to the right place.
-                <br> We're here to help with 24/7 support in no less than 5 minutes. </p>
+                <br> We're here to help with 24/7 support in no less than 5 minutes.
+            </p>
         </div>
         <div class="contact-row">
             <div class="contact-left">
@@ -31,13 +34,11 @@
                         <label for="name">Name</label>
                         <input type="text" placeholder="Name" name="name" id="name" required>
                     </div>
-                    <input type="hidden" name="_next" value="contact.html">
-                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_redirect" value="https://driticore.github.io/gourneyza/contact.html" />
                     <div stylen="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
                         <div class="contact-item">
                             <label for="phone-number">Phone Number</label>
-                            <input type="text" placeholder="012-345-6789"
-                                name="phone-umber" id="phone-number" required>
+                            <input type="text" placeholder="012-345-6789" name="phone-umber" id="phone-number" required>
                         </div>
                         <div class="contact-item">
                             <label for="email">Email Address</label>
@@ -70,4 +71,5 @@
     <script src="components/navbar.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
