--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         </div>
         <div class="contact-row">
             <div class="contact-left">
-                <form action="https://submit-form.com/L1x6d7nH5" method="POST">
+                <form action="https://submit-form.com/L1x6d7nH5" id="form" method="POST">
                     <div class="contact-item">
                         <label for="name">Name</label>
                         <input type="text" placeholder="Name" name="name" id="name" required>
