--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Gourney ZA offers expert web development and white-label marketing services for businesses in South Africa. Specializing in custom website creation, SEO optimization, and digital marketing solutions, we deliver scalable, cost-effective strategies for medical offices, small businesses, and more. Enhance your online presence with tailored web design and marketing solutions. Contact us today at 0656763013 for professional white-label services that grow your business."/>
     <title>Gourney | Home</title>
 
     <link rel="stylesheet" href="styles/styles.css">
@@ -35,8 +36,9 @@
 
     <section class="hero-section">
         <main>
-            <h1>Your Vision, Our Expertise—Crafting Digital <br>Success Together</h1>
-            <p>Creativity & Affordability</p>
+            <h1>Your Vision, Our Expertise—Crafting Digital Success Together</h1>
+            <p>Professional Web Development & White-Label Services in South Africa</p>
+            <p>We blend creativity with affordability to deliver custom website design and digital marketing solutions that help businesses grow.</p>
             <a href="contact.html"><button class="btn">Enquire Here</button></a>
         </main>
         <div class="hero-slide">
