--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gourney | Contact Us</title>
+    <title>Contact Us | Gourney ZA</title>
+    <meta name="description" content="Get in touch with Gourney ZA for professional web development and white-label digital marketing services. We're available 24/7 to assist with your business growth and online presence. Call +27 656763013 or email gourneyza@gmail.com.">
+    
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/grid.css">
-    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -23,9 +22,7 @@
     <main class="contact-container">
         <div class="contact-title">
             <h1>Contact Our Team</h1><br>
-            <p>Looking to know more about our services or scaling your business? Then You've come to the right place.
-                <br> We're here to help with 24/7 support in no less than 5 minutes.
-            </p>
+            <p>Looking to learn more about our services or scale your business? You've come to the right place. We offer 24/7 support and respond within 5 minutes to help you succeed.</p>
         </div>
         <div class="contact-row">
             <div class="contact-left">
@@ -35,10 +32,10 @@
                         <input type="text" placeholder="Name" name="name" id="name" required>
                     </div>
                     <input type="hidden" name="_redirect" value="https://driticore.github.io/gourneyza/contact.html" />
-                    <div stylen="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
+                    <div style="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
                         <div class="contact-item">
                             <label for="phone-number">Phone Number</label>
-                            <input type="text" placeholder="012-345-6789" name="phone-umber" id="phone-number" required>
+                            <input type="tel" placeholder="012-345-6789" name="phone-number" id="phone-number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
                         </div>
                         <div class="contact-item">
                             <label for="email">Email Address</label>
@@ -54,7 +51,7 @@
                 </form>
             </div>
             <div class="contact-right">
-                <h2>Chat with us</h2>
+                <h2>Chat with Us</h2>
                 <div>
                     <i class="fa fa-phone" aria-hidden="true"></i>
                     <span>+27 656763013</span>
