--- a/contact.html
+++ b/contact.html
@@ -26,29 +26,7 @@
         </div>
         <div class="contact-row">
             <div class="contact-left">
-                <form action="https://submit-form.com/L1x6d7nH5" id="form" method="POST">
-                    <div class="contact-item">
-                        <label for="name">Name</label>
-                        <input type="text" placeholder="Name" name="name" id="name" required>
-                    </div>
-                    <input type="hidden" name="_redirect" value="https://driticore.github.io/gourneyza/contact.html" />
-                    <div style="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
-                        <div class="contact-item">
-                            <label for="phone-number">Phone Number</label>
-                            <input type="tel" placeholder="012-345-6789" name="phone-number" id="phone-number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-                        </div>
-                        <div class="contact-item">
-                            <label for="email">Email Address</label>
-                            <input type="email" placeholder="Email" name="email" id="email" required>
-                        </div>
-                        <div class="contact-item">
-                            <label for="message">Message</label>
-                            <textarea name="message" id="message" rows="4"></textarea>
-                        </div>
-                    </div>
-                    <button type="submit"
-                        style="margin-block: 30px; width: 100%; padding: 10px; border: none; background-color: black; color: white; border-radius: 5px;">Submit</button>
-                </form>
+                <div style="width:100%;height:500px;" data-fillout-id="aDsH62dsvkus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize></div><script src="https://server.fillout.com/embed/v1/"></script>
             </div>
             <div class="contact-right">
                 <h2>Chat with Us</h2>
