Update Gourney to V2

--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,7 @@
             <p>Looking to learn more about our services or scale your business? You've come to the right place. We offer 24/7 support and respond within 5 minutes to help you succeed.</p>
         </div>
         <div class="contact-row">
-            <div class="contact-left">
-                <div style="width:100%;height:500px;" data-fillout-id="aDsH62dsvkus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize></div><script src="https://server.fillout.com/embed/v1/"></script>
-            </div>
+<div class="elfsight-app-5fbd1549-fa86-48b4-a1bc-19c3f88d7698" data-elfsight-app-lazy></div>
             <div class="contact-right">
                 <h2>Chat with Us</h2>
                 <div>
@@ -55,6 +53,8 @@
     <script src="components/footer.js"></script>
     <script src="components/navbar.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+
 </body>
 
 </html>
