--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
     <section class="hero-section">
         <main>
-            <h1>Your Vision, Our Expertise—Crafting Digital Success Together</h1>
-            <p>Professional Web Development & White-Label Services in South Africa</p>
-            <p>We blend creativity with affordability to deliver custom website design and digital marketing solutions that help businesses grow.</p>
+            <h1>Affordable Digital Solutions in South Africa</h1>
+            <p>Cheaper Web Development & SEO Services for Growing Businesses</p>
+            <p>We deliver custom designs and digital solutions to help your business thrive.</p>
             <a href="contact.html"><button class="btn">Enquire Here</button></a>
         </main>
+        
         <div class="hero-slide">
             <img src="images/hero-img.svg" alt="">
         </div>
